<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".UI.DetailFragment"
              android:id="@+id/detailCL"
              android:orientation="vertical"
              android:scrollIndicators="right"
              android:scrollbarSize="10dp"
              android:scrollbars="vertical"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mScrollView">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/user_reviewed_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/reviewTV"
                        android:layout_weight="1"
                        android:textAlignment="center"/>
                <TextView
                        android:text="@string/user_rating_5_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ratingTV"
                        android:textColor="@color/colorAccent"
                        android:layout_weight="1"
                        android:textAlignment="center"/>
            </LinearLayout>
            <ImageView
                    android:src="@drawable/tv_sample"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:id="@+id/productImageIV"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/sample_tv"/>
            <TextView
                    android:text="@string/tv_the_best"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/productNameTV"
                    android:textColor="@android:color/background_dark"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:text="@string/_100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/priceTV"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:text="@string/short_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/shortDescTV"
                    android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@string/in_stock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/inStockTV"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintHorizontal_bias="0.58"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:text="@string/longdescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/longDescTV"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="16dp"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>