<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.MainActivity"
        android:id="@+id/constraintLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/menuCL"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:layout_width="200dp"
                android:layout_height="75dp"
                app:srcCompat="@drawable/walmart_logo"
                android:id="@+id/logoIV"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/walmart_title"/>
        <Button
                android:text="@string/next"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/nextBT"
                android:background="@drawable/right_button_64x64"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>
        <Button
                android:text="@string/pre"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/prevBT"
                app:layout_constraintEnd_toStartOf="@id/nextBT"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/left_button_64x64"/>
        <TextView
                android:text="@string/test_lab"
                android:layout_width="84dp"
                android:layout_height="30dp"
                android:id="@+id/testLabTV"
                android:textColor="@color/colorAccent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:textStyle="bold|italic"
                android:fontFamily="casual"
                android:textAlignment="viewEnd"/>
        <TextView
                android:text="@string/page_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pageTV"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:fontFamily="monospace"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="80dp"
                app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/displayContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menuCL">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>